--- a/Java_Design_Patterns/.vscode/settings.json
+++ b/Java_Design_Patterns/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "java.project.sourcePaths": ["src"],
-    "java.project.outputPath": "bin",
+    "java.project.outputPath": "dist",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "dist/**/*.jar"
     ]
 }
