feat: 新增享元模式，装饰器模式，外观模式

--- a/Java_Design_Patterns/.vscode/settings.json
+++ b/Java_Design_Patterns/.vscode/settings.json
@@ -3,5 +3,10 @@
     "java.project.outputPath": "dist",
     "java.project.referencedLibraries": [
         "dist/**/*.jar"
+    ],
+    "java.import.gradle.java.home": "",
+    "java.jdt.ls.java.home": "",
+    "cSpell.words": [
+        "wrappee"
     ]
 }
